--- a/server/.env.example
+++ b/server/.env.example
@@ -13,3 +13,5 @@ SMTP_PORT=587
 SMTP_USER=your-gmail@gmail.com
 SMTP_PASS=your-app-password
 SMTP_FROM=your-gmail@gmail.com
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/your/webhook/url
+SLACK_CHANNEL=#okr-updates
